--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
   "configurations": [
     
     {
-      "name": "Python Debugger: Django",
+      "name": "Python: Django",
       "type": "debugpy",
       "request": "launch",
       "args": [
@@ -14,7 +14,8 @@
       ],
       "django": true,
       "autoStartBrowser": false,
-      "program": "${workspaceFolder}/manage.py"
+      "program": "${workspaceFolder}/manage.py",
+      "python": "${workspaceFolder}/venv/bin/python"
     }
   ]
 }
