--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,5 @@
-// {
-//   "python.testing.pytestArgs": [],
-//   "python.testing.pytestEnabled": true,
-//   "python.testing.unittestEnabled": false,
-
-// }
-
 {
+  "python.testing.pytestArgs": [],
   "python.testing.unittestEnabled": false, 
   "python.testing.pytestEnabled": true,
   "python.defaultInterpreterPath": "venv/bin/python"
